# auditorium

./: Cargo.toml  README.md  TODO.md  app.rs
.github/workflows/: binstall.yml  deploy.yml
pkg/: deploy.sh
src/: app.rs  files.rs  input.rs  main.rs  mpris.rs  mpv.rs  songs.rs  utilities.rs
src/widget/: mod.rs  widget_all.rs  widget_history.rs  widget_library.rs  widget_playing.rs  widget_popup.rs  widget_search.rs  widget_up_next.rs
