[package]
name = "auditorium"
version = "1.2.5"
edition = "2024"
authors = ["Nate Craft"]
keywords = ["music", "CLI", "TUI", "cross-platform", "player"]
license = "MIT"
description = "Auditorium is a cross-platform, local, simple, fast, and distraction free CLI application to listen to your music library"
readme = "README.md"
homepage = "https://github.com/nate-craft/auditorium"
repository = "https://github.com/nate-craft/auditorium"

[dependencies]
mpris-server = { version = "0.9.0", optional = true }
smol = { version = "2.0.2", optional = true }
ratatui-image = { version = "8.0.1", optional = true, default-features = false }
image = { version = "0.25.8", optional = true, default-features = false } 
rlimit = "0.10.2"
rayon = "1.11.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
ffprobe = "0.4.0"
random-number = "0.1.9"
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
clap = { version = "4.5.45", features = ["derive"] }
serde_json = "1.0.143"
textwrap = "0.16.2"
id3 = "1.16.3"

[features]
default = []
mpris = ["mpris-server", "smol"]
art = ["ratatui-image", "image"]
